exports[`text > allow to enter text #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Leverage agile frameworks",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "to provide a robust synopsis for high level overviews.",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};

exports[`text > allow to apply inline styles and links #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {
        "textAlignment": "left"
      },
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 10,
          "offset": 0
        },
        {
          "key": 1,
          "length": 7,
          "offset": 10
        },
        {
          "key": 2,
          "length": 10,
          "offset": 18
        },
        {
          "key": 3,
          "length": 30,
          "offset": 33
        },
        {
          "key": 4,
          "length": 65,
          "offset": 68
        }
      ],
      "inlineStyleRanges": [
        {
          "length": 17,
          "offset": 0,
          "style": "UNDERLINE"
        },
        {
          "length": 45,
          "offset": 18,
          "style": "UNDERLINE"
        },
        {
          "length": 65,
          "offset": 68,
          "style": "UNDERLINE"
        },
        {
          "length": 102,
          "offset": 219,
          "style": "UNDERLINE"
        },
        {
          "length": 78,
          "offset": 322,
          "style": "UNDERLINE"
        },
        {
          "length": 28,
          "offset": 401,
          "style": "UNDERLINE"
        },
        {
          "length": 5,
          "offset": 38,
          "style": "ITALIC"
        },
        {
          "length": 102,
          "offset": 219,
          "style": "ITALIC"
        },
        {
          "length": 78,
          "offset": 322,
          "style": "ITALIC"
        },
        {
          "length": 28,
          "offset": 401,
          "style": "ITALIC"
        },
        {
          "length": 5,
          "offset": 48,
          "style": "BOLD"
        },
        {
          "length": 10,
          "offset": 58,
          "style": "BOLD"
        },
        {
          "length": 100,
          "offset": 219,
          "style": "{\"FG\":\"color5\"}"
        },
        {
          "length": 2,
          "offset": 319,
          "style": "{\"FG\":\"color2\"}"
        },
        {
          "length": 78,
          "offset": 322,
          "style": "{\"FG\":\"color2\"}"
        },
        {
          "length": 149,
          "offset": 401,
          "style": "{\"FG\":\"color2\"}"
        }
      ],
      "key": 2,
      "text": "#LIVING THE DREAM\nLeverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. \nOrganically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.\nBring to the table win-win survival strategies to ensure proactive domination.\nAt the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. ",
      "type": "code-block"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 3,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 76,
          "offset": 0,
          "style": "{\"FG\":\"color2\"}"
        }
      ],
      "key": 5,
      "text": "User generated content in real-time will have multiple touchpoints for offshoring.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 7,
      "text": "Override the digital divide with additional clickthroughs from DevOps.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 8,
      "text": "Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.",
      "type": "unstyled"
    }
  ],
  "entityMap": {
    "0": {
      "data": {
        "rel": "noopener",
        "target": "_blank",
        "url": "https://www.wix.com/"
      },
      "mutability": "MUTABLE",
      "type": "LINK"
    },
    "1": {
      "data": {
        "rel": "noopener",
        "target": "_blank",
        "url": "https://www.sport5.co.il"
      },
      "mutability": "MUTABLE",
      "type": "LINK"
    },
    "2": {
      "data": {
        "rel": "noopener",
        "target": "_blank",
        "url": "https://www.wix.com/"
      },
      "mutability": "MUTABLE",
      "type": "LINK"
    },
    "3": {
      "data": {
        "rel": "noopener",
        "target": "_blank",
        "url": "https://www.sport5.co.il/"
      },
      "mutability": "MUTABLE",
      "type": "LINK"
    },
    "4": {
      "data": {
        "rel": "noopener",
        "target": "_blank",
        "url": "https://www.one.co.il/"
      },
      "mutability": "MUTABLE",
      "type": "LINK"
    }
  }
};

exports[`text > allow to create lists #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "Bring to the table win-win survival strategies to ensure proactive domination.",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 3,
      "text": "At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. ",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "User generated content in real-time will have multiple touchpoints for offshoring.",
      "type": "unordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "Override the digital divide with additional clickthroughs from DevOps.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 7,
      "text": "Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};
